<resources>
    <string name="app_name">Agro App</string>
    <string name="amount_of_seed_planted">Amount of seed planted?</string>
    <string name="land_size">Land Size?</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password must be at least 8 characters long</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in_link">Already have an account?</string>
    <string name="sign_up_link">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="empty_email_and_pass_fields">Ensure both email and password fields are not empty</string>
    <string name="password_confirm_password_not_match">Password and Confirm Password fields should match</string>
    <string name="plant_sowed">Plant sowed?</string>
    <string name="log_out">Log Out</string>
    <string name="reset_email">Reset Email</string>
    <string name="send_password_reset">Send Password Reset Link</string>
    <string name="new_email_address">Enter new email address</string>
    <string name="reset_email_addr">Reset Email Address</string>
    <string name="enter_password">Enter password</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="notifications">Notifications</string>
    <string name="proceed">Proceed</string>
    <string name="plant_image">Plant Image</string>
    <string name="manure_needed">Manure Needed:</string>
    <string name="water_needed">Water Needed:</string>
    <string name="seed_output">Seed Output</string>
    <string name="output_expected">Output Expected:</string>
</resources>
