<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="adam.rao.agroapp.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home" >
        <action
                android:id="@+id/action_nav_home_to_notifications"
                app:destination="@id/notifications"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim" />
        <action
                android:id="@+id/action_nav_home_to_plant_choice"
                app:destination="@id/plant_choice"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
            android:id="@+id/details"
            android:name="adam.rao.agroapp.ui.details.DetailsFragment"
            android:label="Details"
            tools:layout="@layout/fragment_details" />

    <fragment
            android:id="@+id/plant_choice"
            android:name="adam.rao.agroapp.ui.plantchoice.PlantChoiceFragment"
            android:label="Plant Choice"
            tools:layout="@layout/fragment_plant_choice">
        <action
                android:id="@+id/action_plant_choice__to_details"
                app:destination="@id/details"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
            android:id="@+id/nav_tools"
            android:name="adam.rao.agroapp.ui.tools.ToolsFragment"
            android:label="@string/menu_tools"
            tools:layout="@layout/fragment_tools" />

    <fragment
            android:id="@+id/nav_share"
            android:name="adam.rao.agroapp.ui.share.ShareFragment"
            android:label="@string/menu_share"
            tools:layout="@layout/fragment_share" />

    <fragment
            android:id="@+id/notifications"
            android:name="adam.rao.agroapp.ui.notifications.NotificationsFragment"
            android:label="Notifications"
            tools:layout="@layout/fragment_notifications" />
</navigation>