<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/agriculture_background_min"
        tools:context=".SignUpActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

    </LinearLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"
            >

        <RelativeLayout
                android:id="@+id/email_cont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="30dp"
                android:animateLayoutChanges="true"
                android:gravity="center">

            <ImageView
                    android:layout_alignParentEnd="true"
                    android:id="@+id/icon_app"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/agro_icon" />

            <LinearLayout
                    android:visibility="visible"
                    android:layout_alignParentBottom="true"
                    android:id="@+id/email_cont2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/icon_app"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_address_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/email_address"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_input"
                            android:inputType="textEmailAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/password"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/email_address_layout">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_input"
                            android:inputType="textPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirm_password_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/confirm_password"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/password_layout">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/confirm_password_input"
                            android:inputType="textPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                        android:gravity="bottom"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">




                    <Button

                            android:id="@+id/btnSignUp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="24dp"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/major_button_shape"
                            android:text="@string/sign_up"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/colorSecondaryBeta" />

                    <TextView
                            android:layout_centerHorizontal="true"
                            android:layout_below="@id/btnSignUp"
                            android:id="@+id/tv_sign_in_link"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/sign_in_link"
                            android:textAllCaps="true"
                            android:textColor="@color/colorLinks"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/btnSignUp"
                            app:layout_constraintVertical_bias="0.086" />


                </RelativeLayout>
            </LinearLayout>


        </RelativeLayout>


    </RelativeLayout>


</LinearLayout>