<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:padding="4dp"
        tools:context=".SignInActivity"
        android:orientation="vertical"
        android:background="@drawable/agriculture_background_min">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
        <TextView
                android:id="@+id/welcome_text"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Welcome"
                android:textSize="20dp"/>
        <TextView
                android:id="@+id/login_text"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login to your Agro account"
                android:textSize="20dp"/>
    </LinearLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"
            >

        <RelativeLayout
                android:id="@+id/email_cont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="30dp"
                android:animateLayoutChanges="true"
                android:gravity="center">

            <ImageView
                    android:layout_alignParentEnd="true"
                    android:id="@+id/icon_app"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/agro_icon" />

            <LinearLayout
                    android:visibility="gone"
                    android:layout_alignParentBottom="true"
                    android:id="@+id/email_cont2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/icon_app"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_address_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:hint="@string/email_address"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_addr_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/enter_password"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/email_address_layout">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_user_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <Button
                            android:id="@+id/btnSignIn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="24dp"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/major_button_shape"
                            android:text="@string/sign_in"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/colorSecondaryBeta" />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:orientation="horizontal">

                        <TextView
                                android:id="@+id/tv_sign_up_link"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="16dp"
                                android:layout_marginBottom="16dp"
                                android:clickable="true"
                                android:focusable="true"
                                android:text="@string/sign_up_link"
                                android:textAllCaps="true"
                                android:textColor="@color/colorLinks" />

                        <TextView
                                android:id="@+id/tv_forgot_password_link"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="16dp"
                                android:layout_marginBottom="16dp"
                                android:clickable="true"
                                android:focusable="true"
                                android:gravity="center"
                                android:text="@string/forgot_password"
                                android:textAllCaps="true"
                                android:textColor="@color/colorLinks" />
                    </LinearLayout>


                </RelativeLayout>
            </LinearLayout>


        </RelativeLayout>


    </RelativeLayout>

</LinearLayout>